@@ -39,6 +39,7 @@
 -Added rbnb server icon and display server name as root of channel list
 -Now we don't fetch new data when the time scale is decreased
 -Data export functionality. Numeric for now.
+-Add deltaT export option and save date and time in IS8601 format.
 
 1.2.0 - June 21, 2005
 -Added command line option (-s or --time-scale) to set the time scale
